# Project-Game-Linux

./: LICENSE  README.md
rocket-craft/: README.md  pyproject.toml  run_game.py
rocket-craft/assets/audio/: title_theme.mid  town_hangar.mid  town_plaza.mid  town_research.mid
rocket-craft/saves/: autosave.json  profile.json
rocket-craft/src/: config.py  main.py
rocket-craft/src/audio/: __init__.py  audio_manager.py
rocket-craft/src/core/: __init__.py  config.py  fonts.py  game_session.py  game_state.py  save_load.py  time_system.py
rocket-craft/src/data/: casual_dialogue.json  dialogue.json  dialogue_trees.json  story_events.json
rocket-craft/src/entities/: __init__.py  npc.py  parts.py
rocket-craft/src/graphics/: __init__.py  building_renderer.py  camera.py  dialogue_box.py  npc_sprites.py  renderer.py  room_depth.py  sky.py  sprites.py  text_input.py  town_roads.py  ui.py  vegetation.py
rocket-craft/src/maths/: README.md  __init__.py  kepler.py  vector.py
rocket-craft/src/screens/: __init__.py  character_screen.py  hangar_screen.py  house_interior.py  intro_cutscene.py  launch_screen.py  load_game_screen.py  title_screen.py  town_screen.py
rocket-craft/src/simulation/: __init__.py  mission.py  physics.py  physics_py.py  planet.py  rocket.py
rocket-craft/src/systems/: __init__.py  casual_dialogue.py  deep_dialogue.py  dialogue.py  dialogue_tree.py  story_events.py  town_map.py  town_zones.py
